# gitq

./: .gitignore  Makefile  README.org  Setup.hs  gitq.cabal
.github/workflows/: ci.yml  release.yml
app/: Main.hs
doc/: examples.org  gitq.org  scrollback.org
integrations/bash/: gitq.bash
integrations/emacs/: gitq-scrollback.el  gitq.el
integrations/zsh/: _gitq  gitq-scrollback.zsh
native/: Cargo.toml
native/examples/: walk.rs  walk_gix.rs
native/src/: lib.rs
src/Gitq/: AST.hs  Complete.hs  Exec.hs  Frame.hs  Git.hs  Native.hs  Parse.hs  Registry.hs  Render.hs  Terminal.hs  Tokenize.hs
src/Gitq/Scrollback/: Ansi.hs  Browse.hs  Capture.hs  Entry.hs  Render.hs
test/: Spec.hs
test/fixtures/: heuristic-basic.cap
