cabal-version:      3.0
name:               gitq
version:            0.6.1
synopsis:           GitQ — a typed, categorical query language for git
description:
  One query language over git's object graph: describe the data you want by
  composing small, typed operations, and end the pipeline with what should
  happen to the result.  Haskell rewrite of the original Emacs Lisp
  implementation from the git-branch-off package.
license:            MIT
author:             baleti
maintainer:         baleti
build-type:         Custom
extra-doc-files:    README.org
-- the Rust backend's sources must ship in the sdist: `cabal install`
-- builds from an unpacked sdist in a temp dir, and Setup.hs runs cargo
-- inside it when the native flag is set
extra-source-files:
    Makefile
    native/Cargo.lock
    native/Cargo.toml
    native/examples/*.rs
    native/src/*.rs

custom-setup
    setup-depends:
        Cabal     >=3.8,
        base,
        directory,
        filepath,
        process

common warnings
    ghc-options: -Wall -Wincomplete-uni-patterns

-- Link the Rust in-process git backend (native/, libgit2 via the git2
-- crate).  Requires `cargo build --release` in native/ first — use `make
-- native`.  Without the flag the build needs no Rust toolchain and gitq
-- uses subprocess git everywhere.
flag native
    description: Link the Rust gitq-native backend for in-process commit walks
    default:     False
    manual:      True

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:
        Gitq.AST
        Gitq.Complete
        Gitq.Exec
        Gitq.Frame
        Gitq.Git
        Gitq.Native
        Gitq.Parse
        Gitq.Registry
        Gitq.Render
        Gitq.Terminal
        Gitq.Tokenize
    build-depends:
        base       >=4.17 && <5,
        bytestring,
        containers,
        directory,
        filepath,
        process,
        regex-tdfa,
        text,
        time
    -- the library dir is injected as an absolute path by Setup.hs
    -- (ghc-pkg rejects relative extra-lib-dirs)
    if flag(native)
        cpp-options:     -DNATIVE
        extra-libraries: gitq_native
    default-language: Haskell2010

executable gitq
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base,
        directory,
        gitq
    default-language: Haskell2010

test-suite gitq-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base,
        containers,
        directory,
        filepath,
        gitq,
        process,
        text
    default-language: Haskell2010
