[package]
name = "gitq-native"
version = "0.1.0"
edition = "2021"
description = "In-process git backend for gitq (libgit2), linked into the Haskell binary"

[lib]
name = "gitq_native"
crate-type = ["staticlib"]

# default-features = false drops the ssh/https transports (and their
# openssl build dependency) — gitq only ever reads the local object store.
[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
gix = { version = "0.85.0", default-features = false, features = ["revision", "max-performance-safe", "sha1"] }

# only for examples/walk.rs, the libgit2-vs-gix comparison benchmark
[dev-dependencies]
git2 = { version = "0.20", default-features = false }

[profile.release]
lto = true
